--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "watch": "tsc -w",
     "prestart": "npm run build",
     "start": "func start",
-    "test": "echo \"No tests yet...\""
+    "test": "jest",
+    "debug-script": "npx jest test/cget-all-cliente.spec.ts"
   },
   "dependencies": {
     "@azure/cosmos": "^3.11.3"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
+    "@types/jest": "^26.0.23",
+    "jest": "^27.0.4",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.0.0"
   }
 }
